--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,16 @@
 [phases.setup]
-nixPkgs = ["xvfb", "chromium", "nss", "gtk3", "pango", "cairo", "xorg.libXcomposite", "xorg.libXdamage", "xorg.libXfixes", "xorg.libXrandr", "xorg.libX11", "alsa-lib", "libdrm", "mesa"]
+nixPkgs = [
+  "xvfb","chromium","nss","gtk3","pango","cairo",
+  "xorg.libXcomposite","xorg.libXdamage","xorg.libXfixes","xorg.libXrandr","xorg.libX11",
+  "alsa-lib","libdrm","mesa"
+]
 
 [phases.install]
-cmds = ["npm ci", "npx playwright install --with-deps chromium"]
+# Use 'sh -lc' so conditionals work
+cmds = [
+  "sh -lc 'if [ -f package-lock.json ]; then npm ci; else npm install; fi'",
+  "npx playwright install --with-deps chromium"
+]
 
 [start]
 cmd = "xvfb-run -a node worker.cjs"
