--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "linqbridge-worker",
   "version": "1.0.0",
   "private": true,
+  "scripts": { "start": "node worker.cjs" },
+  "dependencies": { "playwright": "^1.46.0" }
+}
+{
   "scripts": {
-    "start": "node worker.cjs"
-  },
-  "dependencies": {
-    "playwright": "^1.46.0"
+    "start": "node worker.cjs",
+    "start:headed": "SOFT_MODE=false HEADLESS=false SLOWMO_MS=50 node worker.cjs",
+    "start:headed:xvfb": "SOFT_MODE=false HEADLESS=false SLOWMO_MS=50 xvfb-run -a node worker.cjs"
   }
 }
