--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:headed": "SOFT_MODE=false HEADLESS=false SLOWMO_MS=50 node worker.cjs"
   },
   "dependencies": {
+    "otplib": "^12.0.1",
     "playwright": "^1.47.2"
   },
   "engines": {
